--- a/css/layout.css
+++ b/css/layout.css
@@ -1,10 +1,28 @@
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+    margin: 0;
+}
+
+header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 50px;
+}
+
 main {
     display: flex;
+    flex: 1;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
 }
 
+h1 {
+    margin-top: -30px;
+}
 .column_left {
     display: flex;
     flex-direction: column;
@@ -21,4 +39,14 @@ main {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
+}
+
+img {
+    max-height: 300px;
+    max-width: 300px;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
 }
