--- a/css/layout.css
+++ b/css/layout.css
@@ -1,52 +1,120 @@
 body {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
-    margin: 0;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
 }
 
 header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    min-height: 50px;
-}
-
-main {
-    display: flex;
-    flex: 1;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-end;
 }
 
 h1 {
-    margin-top: -30px;
+  font-size: 10vh;
 }
+
+main {
+  display: flex;
+  justify-content: space-around;
+}
+
 .column_left {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    flex: 0 0 64%;
+  display: flex;
+  width: 70%;
+  flex-direction: column;
+}
+
+.service_title {
+  font-weight: 700;
+  padding: 3%;
+}
+
+.services-container,
+.places-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.services-container > .es,
+.place_text {
+  display: flex;
+  justify-content: center;
+  padding: 15px;
+  gap: 10px;
+  margin: 15px;
+  flex-direction: row;
+  background-color: #ffffff;
+  border-radius: 20px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+  transition: transform 0.3s ease;
+  flex-wrap: wrap;
+  text-align: center;
+}
+
+aside {
+  padding: 15px;
+  display: flex;
+  justify-content: center;
+  max-height: 800px;
+}
+
+.guest-list-wrapper {
+  overflow: scroll;
+  max-height: 100%;
+}
+
+.guest {
+  padding: 15px;
+  gap: 10px;
+  margin: 15px;
+  flex-direction: row;
+  background-color: #ffffff;
+  border-radius: 20px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+  transition: transform 0.3s ease;
+  flex-wrap: wrap;
+  text-align: center;
+}
+
+.place_text {
+  width: 200px;
+}
+
+.es:hover {
+  /* transform: translateY(-1px); */
+  box-shadow: 0 2px 4px rgba(26, 63, 215, 0.6);
 }
 
 .column_right {
-    flex: 0 0 31%;
-}
-
-.destinations {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
+  flex: 0 0 31%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
 img {
-    max-height: 300px;
-    max-width: 300px;
+  display: flex;
+  flex-direction: row;
+  max-height: 300px;
+  max-width: 300px;
 }
 
 footer {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style: none;
 }
